// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(Link)
  className="activity-link"
  to={
    {
      "pathname": "/project/activity",
      "search": "?id=foo",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</ForwardRef(Link)>
`;

exports[`renders correctly 2`] = `
<ForwardRef(Link)
  className="activity-link"
  to={
    {
      "pathname": "/project/activity",
      "search": "?id=foo&branch=branch-6.7",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    Foo
  </span>
</ForwardRef(Link)>
`;

exports[`renders correctly 3`] = `
<ForwardRef(Link)
  className="activity-link"
  to={
    {
      "pathname": "/project/activity",
      "search": "?id=foo&graph=coverage",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</ForwardRef(Link)>
`;

exports[`renders correctly 4`] = `
<ForwardRef(Link)
  className="activity-link"
  to={
    {
      "pathname": "/project/activity",
      "search": "?id=foo&graph=custom&custom_metrics=new_bugs%2Cbugs",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</ForwardRef(Link)>
`;
